# BGDK

./: .eslintignore  .eslintrc.json  .gcloudignore  .gitignore  .prettierignore  .prettierrc  README.md  api.yaml  app.yaml  babel.config.json  cloudbuild.yaml  development.csr  dispatch.yaml  docker-compose.yaml  docker-compose.yml  eslint.config.js  exampledomain.com.key  jest.config.mjs  jest.config.ts  jest.preset.cjs  jest.preset.js  migrations.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vertex.yaml  website.yaml
.github/workflows/: CI.yml  ci.yml  static.yml
.nx/workspace-data/: eslint-4393011795395336301.hash  eslint-8099571024292556848.hash  file-map.json  jest-7930610538513362720.hash  lockfile.hash  parsed-lock-file.json  project-graph.json  vite-10538225559886866074.hash  vite.hash
__mocks__/: mocks.mts  mocks.ts
apis/games-api/: Dockerfile  jest.config.ts  project.json  tsconfig.app.json  tsconfig.json  webpack.config.js  (+1 more)
apis/games-api-e2e/: jest.config.ts  project.json  tsconfig.json  tsconfig.spec.json
apps/wdg-agents/: .coverage  project.json  pyproject.toml
apps/wdg-agents/data_store/904ea853-b5e3-4b70-81d8-ef9ac19f9d84/: index_metadata.pickle
apps/wdg-agents/data_store/d4e2dc2e-6c89-4858-9f58-6be12d7fafa9/: index_metadata.pickle
apps/wdg-agents/data_store/d996362a-ff81-429a-9044-9e0ff19070b8/: index_metadata.pickle
apps/wdg-agents/data_store/ecd04a52-7d73-42c4-b38f-8f4a331623c2/: index_metadata.pickle
apps/wdg-agents/wdg_agents/: agent_1.py  agent_2.py  cli.py  rag_chain.py  utils.py
(+1299 files in other folders)
